--- a/subscriber/manage-patient.html
+++ b/subscriber/manage-patient.html
@@ -55,10 +55,10 @@
                                 </a>
                                 <ul class="nk-menu-sub">
                                     <li class="nk-menu-item">
-                                        <a href="#" class="nk-menu-link"><span class="nk-menu-text">Add Medicine</span></a>
+                                        <a href="subscriber/add-medcine.html" class="nk-menu-link"><span class="nk-menu-text">Add Medicine</span></a>
                                     </li>
                                     <li class="nk-menu-item">
-                                        <a href="#" class="nk-menu-link"><span class="nk-menu-text">Medicine List</span></a>
+                                        <a href="subscriber/manage-medcine.html" class="nk-menu-link"><span class="nk-menu-text">Medicine List</span></a>
                                     </li>
                                     <li class="nk-menu-item">
                                         <a href="#" class="nk-menu-link"><span class="nk-menu-text">Medicine Details</span></a>
