--- a/subscriber/add-medcine.html
+++ b/subscriber/add-medcine.html
@@ -41,10 +41,10 @@
                                 </a>
                                 <ul class="nk-menu-sub">
                                     <li class="nk-menu-item">
-                                        <a href="" class="nk-menu-link"><span class="nk-menu-text">Add Patient</span></a>
+                                        <a href="subscriber/add-patient.html" class="nk-menu-link"><span class="nk-menu-text">Add Patient</span></a>
                                     </li>
                                     <li class="nk-menu-item">
-                                        <a href="" class="nk-menu-link"><span class="nk-menu-text">Manage Patient</span></a>
+                                        <a href="subscriber/manage-patient.html" class="nk-menu-link"><span class="nk-menu-text">Manage Patient</span></a>
                                     </li>
                                 </ul><!-- .nk-menu-sub -->
                             </li><!-- .nk-menu-item -->
@@ -55,10 +55,10 @@
                                 </a>
                                 <ul class="nk-menu-sub">
                                     <li class="nk-menu-item">
-                                        <a href="#" class="nk-menu-link"><span class="nk-menu-text">Add Medicine</span></a>
+                                        <a href="subscriber/add-medcine.html" class="nk-menu-link"><span class="nk-menu-text">Add Medicine</span></a>
                                     </li>
                                     <li class="nk-menu-item">
-                                        <a href="#" class="nk-menu-link"><span class="nk-menu-text">Medicine List</span></a>
+                                        <a href="subscriber/manage-medcine.html" class="nk-menu-link"><span class="nk-menu-text">Medicine List</span></a>
                                     </li>
                                     <li class="nk-menu-item">
                                         <a href="#" class="nk-menu-link"><span class="nk-menu-text">Medicine Details</span></a>
