--- a/subscriber/patient-profile.html
+++ b/subscriber/patient-profile.html
@@ -92,72 +92,45 @@
                                 <input type="text" class="form-control border-transparent form-focus-none" placeholder="Search anything">
                             </div><!-- .nk-header-news -->
                             <div class="nk-header-tools">
-                                <ul class="nk-quick-nav">
-                                    <li class="dropdown notification-dropdown">
-                                        <a href="#" class="dropdown-toggle nk-quick-nav-icon" data-bs-toggle="dropdown">
-                                            <div class="icon-status icon-status-info"><em class="icon ni ni-bell"></em></div>
+                                <ul class="nk-menu">
+                                    <li class="nk-menu-item">
+                                        <a href="subscriber/subscriber-dashbaord.html" class="nk-menu-link">
+                                            <span class="nk-menu-icon"><em class="icon ni ni-dashboard-fill"></em></span>
+                                            <span class="nk-menu-text">Dashboard</span>
                                         </a>
-                                        <div class="dropdown-menu dropdown-menu-xl dropdown-menu-end">
-                                            <div class="dropdown-head">
-                                                <span class="sub-title nk-dropdown-title">Notifications</span>
-                                                <a href="#">Mark All as Read</a>
-                                            </div>
-                                            <div class="dropdown-body">
-                                                <div class="nk-notification">
-                                                    
-                                                    <div class="nk-notification-item dropdown-inner">
-                                                        <div class="nk-notification-icon">
-                                                            <em class="icon icon-circle bg-success-dim ni ni-curve-down-left"></em>
-                                                        </div>
-                                                        <div class="nk-notification-content">
-                                                            <div class="nk-notification-text">Your <span>Deposit Order</span> is placed</div>
-                                                            <div class="nk-notification-time">2 hrs ago</div>
-                                                        </div>
-                                                    </div>
-                                                </div><!-- .nk-notification -->
-                                            </div><!-- .nk-dropdown-body -->
-                                            <div class="dropdown-foot center">
-                                                <a href="#">View All</a>
-                                            </div>
-                                        </div>
-                                    </li>
-                                   
-                                    <li class="dropdown user-dropdown">
-                                        <a href="#" class="dropdown-toggle me-n1" data-bs-toggle="dropdown">
-                                            <div class="user-toggle">
-                                                <div class="user-avatar sm">
-                                                    <em class="icon ni ni-user-alt"></em>
-                                                </div>
-                                            </div>
+                                    </li><!-- .nk-menu-item -->
+                                    <li class="nk-menu-item has-sub">
+                                        <a href="#patients" class="nk-menu-link nk-menu-toggle">
+                                            <span class="nk-menu-icon"><em class="icon ni ni-users-fill"></em></span>
+                                            <span class="nk-menu-text">Patients</span>
                                         </a>
-                                        <div class="dropdown-menu dropdown-menu-md dropdown-menu-end">
-                                            <div class="dropdown-inner user-card-wrap bg-lighter">
-                                                <div class="user-card">
-                                                    <div class="user-avatar">
-                                                        <span>KS</span>
-                                                    </div>
-                                                    <div class="user-info">
-                                                        <span class="lead-text">Kabiru Sani</span>
-                                                        <span class="sub-text">info@kbs.com</span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="dropdown-inner">
-                                                <ul class="link-list">
-                                                    <li><a href="html/hospital/user-profile.html"><em class="icon ni ni-user-alt"></em><span>View Profile</span></a></li>
-                                                    <li><a href="html/hospital/settings.html"><em class="icon ni ni-setting-alt"></em><span>Account Setting</span></a></li>
-                                                    <li><a href="html/hospital/settings-account-log.html"><em class="icon ni ni-activity-alt"></em><span>Login Activity</span></a></li>
-                                                    <li><a class="dark-switch" href="#"><em class="icon ni ni-moon"></em><span>Dark Mode</span></a></li>
-                                                </ul>
-                                            </div>
-                                            <div class="dropdown-inner">
-                                                <ul class="link-list">
-                                                    <li><a href="index.html"><em class="icon ni ni-signout"></em><span>Sign out</span></a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
+                                        <ul class="nk-menu-sub">
+                                            <li class="nk-menu-item">
+                                                <a href="subscriber/add-patient.html" class="nk-menu-link"><span class="nk-menu-text">Add Patient</span></a>
+                                            </li>
+                                            <li class="nk-menu-item">
+                                                <a href="subscriber/manage-patient.html" class="nk-menu-link"><span class="nk-menu-text">Manage Patient</span></a>
+                                            </li>
+                                        </ul><!-- .nk-menu-sub -->
+                                    </li><!-- .nk-menu-item -->
+                                    <li class="nk-menu-item has-sub">
+                                        <a href="#" class="nk-menu-link nk-menu-toggle">
+                                            <span class="nk-menu-icon"><em class="icon ni ni-capsule-fill"></em></span>
+                                            <span class="nk-menu-text">Parmacy</span>
+                                        </a>
+                                        <ul class="nk-menu-sub">
+                                            <li class="nk-menu-item">
+                                                <a href="subscriber/add-medcine.html" class="nk-menu-link"><span class="nk-menu-text">Add Medicine</span></a>
+                                            </li>
+                                            <li class="nk-menu-item">
+                                                <a href="subscriber/manage-medcine.html" class="nk-menu-link"><span class="nk-menu-text">Medicine List</span></a>
+                                            </li>
+                                            <li class="nk-menu-item">
+                                                <a href="#" class="nk-menu-link"><span class="nk-menu-text">Medicine Details</span></a>
+                                            </li>
+                                        </ul><!-- .nk-menu-sub -->
+                                    </li><!-- .nk-menu-item -->
+                                </ul><!-- .nk-menu -->
                             </div>
                         </div><!-- .nk-header-wrap -->
                     </div><!-- .container-fliud -->
