--- a/subscriber/subscriber-dashbaord.html
+++ b/subscriber/subscriber-dashbaord.html
@@ -55,7 +55,7 @@
                                         <a href="subscriber/add-medcine.html" class="nk-menu-link"><span class="nk-menu-text">Add Medicine</span></a>
                                     </li>
                                     <li class="nk-menu-item">
-                                        <a href="#" class="nk-menu-link"><span class="nk-menu-text">Medicine List</span></a>
+                                        <a href="subscriber/manage-medcine.html" class="nk-menu-link"><span class="nk-menu-text">Medicine List</span></a>
                                     </li>
                                     <li class="nk-menu-item">
                                         <a href="#" class="nk-menu-link"><span class="nk-menu-text">Medicine Details</span></a>
