--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
         else if (username === "subscriber@demo" && password === "12345") {
             window.location.replace("subscriber/subscriber-dashbaord.html");
         }
+        else if (username === "patient@demo" && password === "12345") {
+            window.location.replace("Patient/patient-dashboard.html");
+        }
          else {
             alert("Please provide valid login information");
             return;
