--- a/superAdmin/super-admin-dashboard.html
+++ b/superAdmin/super-admin-dashboard.html
@@ -187,7 +187,7 @@
                                 </a>
                             </li>
                             <li class="nk-menu-item">
-                                <a href="html/hospital/appointment.html" class="nk-menu-link">
+                                <a href="superAdmin/appointments.html" class="nk-menu-link">
                                     <span class="nk-menu-icon"><em class="icon ni ni-note-add-fill"></em></span>
                                     <span class="nk-menu-text">Appointment List</span>
                                 </a>
