--- a/subscriber/subscriber-dashbaord.html
+++ b/subscriber/subscriber-dashbaord.html
@@ -11,7 +11,7 @@
     <!-- Fav Icon  -->
     <link rel="shortcut icon" href="./assets/images/favicon.png">
     <!-- Page Title  -->
-    <title> Super Admin | Dashboard </title>
+    <title> Subscriber | Dashboard </title>
     <!-- StyleSheets  -->
     <link rel="stylesheet" href="./assets/css/dashlite.css?ver=3.1.3">
     <link id="skin-default" rel="stylesheet" href="./assets/css/theme.css?ver=3.1.3">
