--- a/superAdmin/super-admin-dashboard.html
+++ b/superAdmin/super-admin-dashboard.html
@@ -107,9 +107,9 @@
                                     <span class="nk-menu-text">Medicine</span>
                                 </a>
                                 <ul class="nk-menu-sub">
-                                    <li class="nk-menu-item">
+                                    <!-- <li class="nk-menu-item">
                                         <a href="#" class="nk-menu-link"><span class="nk-menu-text">Add Medicine</span></a>
-                                    </li>
+                                    </li> -->
                                     <li class="nk-menu-item">
                                         <a href="#" class="nk-menu-link"><span class="nk-menu-text">Medicine List</span></a>
                                     </li>
@@ -138,15 +138,15 @@
                                     <span class="nk-menu-text">Return</span>
                                 </a>
                                 <ul class="nk-menu-sub">
-                                    <li class="nk-menu-item">
+                                    <!-- <li class="nk-menu-item">
                                         <a href="html/pharmacy/add-wastage-return.html" class="nk-menu-link"><span class="nk-menu-text">Add Wastage Return</span></a>
-                                    </li>
+                                    </li> -->
                                     <li class="nk-menu-item">
                                         <a href="html/pharmacy/wastage-return.html" class="nk-menu-link"><span class="nk-menu-text">Wastage Return List</span></a>
                                     </li>
-                                    <li class="nk-menu-item">
+                                    <!-- <li class="nk-menu-item">
                                         <a href="html/pharmacy/add-manufacturer-return.html" class="nk-menu-link"><span class="nk-menu-text">Add Manufacture Return</span></a>
-                                    </li>
+                                    </li> -->
                                     <li class="nk-menu-item">
                                         <a href="html/pharmacy/manufacturer-return.html" class="nk-menu-link"><span class="nk-menu-text">Manufacturer Return List</span></a>
                                     </li>
@@ -199,9 +199,6 @@
                                 </a>
                                 <ul class="nk-menu-sub">
                                     <li class="nk-menu-item">
-                                        <a href="html/hospital/patient-add.html" class="nk-menu-link"><span class="nk-menu-text">Add Patient</span></a>
-                                    </li>
-                                    <li class="nk-menu-item">
                                         <a href="html/hospital/patient-list.html" class="nk-menu-link"><span class="nk-menu-text">IPD / OPD Patients</span></a>
                                     </li>
                                     <li class="nk-menu-item">
@@ -215,9 +212,9 @@
                                     <span class="nk-menu-text">Doctors / Nurses</span>
                                 </a>
                                 <ul class="nk-menu-sub">
-                                    <li class="nk-menu-item">
+                                    <!-- <li class="nk-menu-item">
                                         <a href="html/hospital/doctor-nurse-add.html" class="nk-menu-link"><span class="nk-menu-text">Add Doctor / Nurses</span></a>
-                                    </li>
+                                    </li> -->
                                     <li class="nk-menu-item">
                                         <a href="html/hospital/doctor-nurse-list.html" class="nk-menu-link"><span class="nk-menu-text">Doctors / Nurses</span></a>
                                     </li>
