--- a/register.html
+++ b/register.html
@@ -85,7 +85,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <button class="btn btn-lg btn-primary btn-block">Register</button>
+                                        <a href="payment.html" class="btn btn-lg btn-primary btn-block">Register</a>
                                     </div>
                                 </form>
                                 <div class="form-note-s2 text-center pt-4"> Already have an account? <a href="index.html"><strong>Sign in instead</strong></a>
