--- a/superAdmin/sp-death-report.html
+++ b/superAdmin/sp-death-report.html
@@ -556,6 +556,56 @@
                                                                                             <div class="row gx-6 gy-3">
                                                                                                 <div class="col-6">
                                                                                                     <div class="form-group">
+                                                                                                        <label class="overline-title overline-title-alt">Hospital</label>
+                                                                                                        <select class="form-select js-select2">
+                                                                                                            <option value="any">Hospital A</option>
+                                                                                                            <option value="ev"> Hospital B</option>
+                                                                                                            <option value="ve"> Hospital C</option>
+                                                                                                            <option value="ti"> Hospital D</option>
+                                                                                                        </select>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                                <div class="col-6">
+                                                                                                    <div class="form-group">
+                                                                                                        <label class="overline-title overline-title-alt">Age</label>
+                                                                                                        <select class="form-select js-select2">
+                                                                                                            <option value="any">0-5</option>
+                                                                                                            <option value="ev"> 6-11</option>
+                                                                                                            <option value="ve"> 12-19</option>
+                                                                                                            <option value="ti"> 20-29</option>
+                                                                                                            <option value="ti"> 30-49</option>
+                                                                                                            <option value="ti"> 50-Above</option>
+                                                                                                        </select>
+                                                                                                    </div>
+                                                                                                </div>
+
+                                                                                                <div class="col-6">
+                                                                                                    <div class="form-group">
+                                                                                                        <label class="overline-title overline-title-alt">State</label>
+                                                                                                        <select class="form-select js-select2">
+                                                                                                            <option value="any">State A</option>
+                                                                                                            <option value="ev"> State B</option>
+                                                                                                            <option value="ve"> State C</option>
+                                                                                                            <option value="ti"> State D</option>
+                                                                                                        </select>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                                <div class="col-6">
+                                                                                                    <div class="form-group">
+                                                                                                        <label class="overline-title overline-title-alt">Geopolitical Zone</label>
+                                                                                                        <select class="form-select js-select2">
+                                                                                                            <option value="any">Select</option>
+                                                                                                            <option value="normal">North West</option>
+                                                                                                            <option value="cesarean">North East</option>
+                                                                                                            <option value="cesarean">South West</option>
+                                                                                                            <option value="cesarean">South East</option>
+                                                                                                            <option value="cesarean">South South</option>
+                                                                                                            <option value="cesarean">North Central</option>
+                                                                                                        </select>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                                <div class="col-6">
+                                                                                                    <div class="form-group">
                                                                                                         <label class="overline-title overline-title-alt">Gender</label>
                                                                                                         <select class="form-select js-select2">
                                                                                                             <option value="any">Select</option>
