--- a/superAdmin/sp-staff.html
+++ b/superAdmin/sp-staff.html
@@ -583,6 +583,34 @@
                                                                                                 </div>
                                                                                                 <div class="col-6">
                                                                                                     <div class="form-group">
+                                                                                                        <label class="overline-title overline-title-alt">State</label>
+                                                                                                        <select class="form-select js-select2">
+                                                                                                            <option value="any">Select</option>
+                                                                                                            <option value="normal">State West</option>
+                                                                                                            <option value="cesarean">State A</option>
+                                                                                                            <option value="cesarean">State B</option>
+                                                                                                            <option value="cesarean">State C</option>
+                                                                                                            <option value="cesarean">State D</option>
+                                                                                                            <option value="cesarean">State E</option>
+                                                                                                        </select>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                                <div class="col-6">
+                                                                                                    <div class="form-group">
+                                                                                                        <label class="overline-title overline-title-alt">Geopolitical Zone</label>
+                                                                                                        <select class="form-select js-select2">
+                                                                                                            <option value="any">Select</option>
+                                                                                                            <option value="normal">North West</option>
+                                                                                                            <option value="cesarean">North East</option>
+                                                                                                            <option value="cesarean">South West</option>
+                                                                                                            <option value="cesarean">South East</option>
+                                                                                                            <option value="cesarean">South South</option>
+                                                                                                            <option value="cesarean">North Central</option>
+                                                                                                        </select>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                                <div class="col-6">
+                                                                                                    <div class="form-group">
                                                                                                         <label class="overline-title overline-title-alt">Grade Level</label>
                                                                                                         <div class="form-control-wrap">
                                                                                                             <select class="form-select js-select2" data-placeholder="Select Doctor">
@@ -761,7 +789,7 @@
                                                         <div class="nk-tb-col nk-tb-col-tools">
                                                             <ul class="nk-tb-actions gx-1">
                                                                 <li class="nk-tb-action-hidden">
-                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Quick View">
+                                                                    <a href="superAdmin/sp-staff-profile.html" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="View Profile">
                                                                         <em class="icon ni ni-eye-fill"></em>
                                                                     </a>
                                                                 </li>
@@ -838,7 +866,7 @@
                                                         <div class="nk-tb-col nk-tb-col-tools">
                                                             <ul class="nk-tb-actions gx-1">
                                                                 <li class="nk-tb-action-hidden">
-                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Quick View">
+                                                                    <a href="superAdmin/sp-staff-profile.html" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="View Profile">
                                                                         <em class="icon ni ni-eye-fill"></em>
                                                                     </a>
                                                                 </li>
@@ -915,7 +943,7 @@
                                                         <div class="nk-tb-col nk-tb-col-tools">
                                                             <ul class="nk-tb-actions gx-1">
                                                                 <li class="nk-tb-action-hidden">
-                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Quick View">
+                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="View Profile">
                                                                         <em class="icon ni ni-eye-fill"></em>
                                                                     </a>
                                                                 </li>
@@ -992,7 +1020,7 @@
                                                         <div class="nk-tb-col nk-tb-col-tools">
                                                             <ul class="nk-tb-actions gx-1">
                                                                 <li class="nk-tb-action-hidden">
-                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Quick View">
+                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="View Profile">
                                                                         <em class="icon ni ni-eye-fill"></em>
                                                                     </a>
                                                                 </li>
@@ -1069,7 +1097,7 @@
                                                         <div class="nk-tb-col nk-tb-col-tools">
                                                             <ul class="nk-tb-actions gx-1">
                                                                 <li class="nk-tb-action-hidden">
-                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Quick View">
+                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="View Profile">
                                                                         <em class="icon ni ni-eye-fill"></em>
                                                                     </a>
                                                                 </li>
@@ -1146,7 +1174,7 @@
                                                         <div class="nk-tb-col nk-tb-col-tools">
                                                             <ul class="nk-tb-actions gx-1">
                                                                 <li class="nk-tb-action-hidden">
-                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Quick View">
+                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="View Profile">
                                                                         <em class="icon ni ni-eye-fill"></em>
                                                                     </a>
                                                                 </li>
@@ -1223,7 +1251,7 @@
                                                         <div class="nk-tb-col nk-tb-col-tools">
                                                             <ul class="nk-tb-actions gx-1">
                                                                 <li class="nk-tb-action-hidden">
-                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Quick View">
+                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="View Profile">
                                                                         <em class="icon ni ni-eye-fill"></em>
                                                                     </a>
                                                                 </li>
@@ -1299,7 +1327,7 @@
                                                         <div class="nk-tb-col nk-tb-col-tools">
                                                             <ul class="nk-tb-actions gx-1">
                                                                 <li class="nk-tb-action-hidden">
-                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Quick View">
+                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="View Profile">
                                                                         <em class="icon ni ni-eye-fill"></em>
                                                                     </a>
                                                                 </li>
@@ -1376,7 +1404,7 @@
                                                         <div class="nk-tb-col nk-tb-col-tools">
                                                             <ul class="nk-tb-actions gx-1">
                                                                 <li class="nk-tb-action-hidden">
-                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Quick View">
+                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="View Profile">
                                                                         <em class="icon ni ni-eye-fill"></em>
                                                                     </a>
                                                                 </li>
@@ -1453,7 +1481,7 @@
                                                         <div class="nk-tb-col nk-tb-col-tools">
                                                             <ul class="nk-tb-actions gx-1">
                                                                 <li class="nk-tb-action-hidden">
-                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Quick View">
+                                                                    <a href="#" class="btn btn-trigger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="View Profile">
                                                                         <em class="icon ni ni-eye-fill"></em>
                                                                     </a>
                                                                 </li>
