--- a/register.html
+++ b/register.html
@@ -43,33 +43,49 @@
                                 </div>
                                 <form action="">
                                     <div class="form-group">
-                                        <label class="form-label" for="name">Hospital Name</label>
+                                        <label class="form-label" for="category">Hospital Category</label>
                                         <div class="form-control-wrap">
-                                            <input type="text" class="form-control form-control-lg" id="name" placeholder="Enter your Hospital name">
+                                            <select name="category" id="" class="form-control form-control-lg">
+                                                <option value="#">---Select Hospital Category---</option>
+                                                <option value="">Federal/Tertiary Hospital</option>
+                                                <option value="">Federal Medical Centre</option>
+                                                <option value="">Other Specialized Federal Hospital</option>
+                                            </select>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class="form-label" for="category">Hospital Name</label>
+                                        <div class="form-control-wrap">
+                                            <select name="category" id="" class="form-control form-control-lg">
+                                                <option value="#">---Select Hospital---</option>
+                                                <option value="">ABUTH</option>
+                                                <option value="">University of Benin Teaching Hospital</option>
+                                                <option value="">University of Calabar Teaching Hospita</option>
+                                                <option value="">Federal Medical Center Gusau</option>
+                                                <option value="">Others</option>
+                                            </select>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="form-label" for="email">Email or Username</label>
+                                        <label class="form-label" for="email">Email</label>
                                         <div class="form-control-wrap">
                                             <input type="text" class="form-control form-control-lg" id="email" placeholder="Enter your email address or username">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label class="form-label" for="category">Hospital Category</label>
+                                        <label class="form-label" for="password">Password</label>
                                         <div class="form-control-wrap">
-                                            <select name="category" id="" class="form-control form-control-lg">
-                                                <option value="#">---Select Hospital Category---</option>
-                                                <option value="">Federal/Tertiary Hospital</option>
-                                                <option value="">State/Secondary Hospital</option>
-                                                <option value="">Local Government/Primary Hospital</option>
-                                                <option value="">Private Hospital</option>
-                                            </select>
+                                            <a href="#" class="form-icon form-icon-right passcode-switch lg" data-target="password">
+                                                <em class="passcode-icon icon-show icon ni ni-eye"></em>
+                                                <em class="passcode-icon icon-hide icon ni ni-eye-off"></em>
+                                            </a>
+                                            <input type="password" class="form-control form-control-lg" id="password" placeholder="Enter your passcode">
                                         </div>
                                     </div>
-
                                     <div class="form-group">
-                                        <label class="form-label" for="password">Passcode</label>
+                                        <label class="form-label" for="password">Confirm Password</label>
                                         <div class="form-control-wrap">
                                             <a href="#" class="form-icon form-icon-right passcode-switch lg" data-target="password">
                                                 <em class="passcode-icon icon-show icon ni ni-eye"></em>
