--- a/superAdmin/super-admin-dashboard.html
+++ b/superAdmin/super-admin-dashboard.html
@@ -577,52 +577,6 @@
                                                     <ul class="nk-store-statistics">
                                                         <li class="item">
                                                             <div class="info">
-                                                                <div class="fs-14px fw-bold">Total State Hospitals</div>
-                                                                <div class="count">1200</div>
-                                                            </div>
-                                                            <em class="icon bg-primary-dim ni ni-home-fill"></em>
-                                                        </li>
-                                                    </ul>
-                                                </div><!-- .card-inner -->
-                                            </div><!-- .card -->
-                                        </div>
-                                        <div class="col-md-4 col-xxl-3">
-                                            <div class="card">
-                                                <div class="card-inner">
-                                                    <ul class="nk-store-statistics">
-                                                        <li class="item">
-                                                            <div class="info">
-                                                                <div class="fs-14px fw-bold">Total LGA Hospitals</div>
-                                                                <div class="count">200</div>
-                                                            </div>
-                                                            <em class="icon bg-primary-dim ni ni-home-fill"></em>
-                                                        </li>
-                                                    </ul>
-                                                </div><!-- .card-inner -->
-                                            </div><!-- .card -->
-                                        </div>
-
-                                        <div class="col-md-4 col-xxl-3">
-                                            <div class="card">
-                                                <div class="card-inner">
-                                                    <ul class="nk-store-statistics">
-                                                        <li class="item">
-                                                            <div class="info">
-                                                                <div class="fs-14px fw-bold">Total Private Hospitals</div>
-                                                                <div class="count">200</div>
-                                                            </div>
-                                                            <em class="icon bg-primary-dim ni ni-home-fill"></em>
-                                                        </li>
-                                                    </ul>
-                                                </div><!-- .card-inner -->
-                                            </div><!-- .card -->
-                                        </div>
-                                        <div class="col-md-4 col-xxl-3">
-                                            <div class="card">
-                                                <div class="card-inner">
-                                                    <ul class="nk-store-statistics">
-                                                        <li class="item">
-                                                            <div class="info">
                                                                 <div class="fs-14px fw-bold">Total Departments</div>
                                                                 <div class="count">200</div>
                                                             </div>
@@ -786,8 +740,8 @@
                                                 <div class="card-inner">
                                                     <div class="card-title-group pb-3 g-2">
                                                         <div class="card-title">
-                                                            <h6 class="title">Income vs Expenses</h6>
-                                                            <p>Last 30 days Income vs Expenses Statistics.</p>
+                                                            <h6 class="title">Birth Rate vs Death Rate</h6>
+                                                            <p>Last 6 months Birth Rate vs Death Rate Statistics across federal hospitals.</p>
                                                         </div>
                                                         <div class="card-tools shrink-0 d-none d-sm-block">
                                                             <ul class="nav nav-switch-s2 nav-tabs bg-white">
