--- a/superAdmin/sp-staff.html
+++ b/superAdmin/sp-staff.html
@@ -561,6 +561,21 @@
                                                                                         </div>
                                                                                         <div class="dropdown-body dropdown-body-rg">
                                                                                             <div class="row gx-6 gy-3">
+                                                                                                <div class="col-12">
+                                                                                                    <div class="form-group">
+                                                                                                        <label class="overline-title overline-title-alt">Hospital</label>
+                                                                                                        <select class="form-select js-select2">
+                                                                                                            <option value="any">Select Hospital</option>
+                                                                                                            <option value="normal">Hospital Z</option>
+                                                                                                            <option value="cesarean">Hospital A</option>
+                                                                                                            <option value="cesarean">Hospital B</option>
+                                                                                                            <option value="cesarean">Hospital C</option>
+                                                                                                            <option value="cesarean">Hospital D</option>
+                                                                                                            <option value="cesarean">Hospital E</option>
+                                                                                                        </select>
+                                                                                                    </div>
+                                                                                                </div>
+
                                                                                                 <div class="col-6">
                                                                                                     <div class="form-group">
                                                                                                         <label class="overline-title overline-title-alt">Department</label>
