--- a/superAdmin/sp-medicine-list.html
+++ b/superAdmin/sp-medicine-list.html
@@ -521,11 +521,63 @@
                                                         <li>
                                                             <div class="drodown">
                                                                 <a href="#" class="dropdown-toggle btn btn-white btn-dim btn-outline-light" data-bs-toggle="dropdown"><em class="d-none d-sm-inline icon ni ni-filter-alt"></em><span><span class="d-none d-md-inline"></span>Filtered By</span><em class="dd-indc icon ni ni-chevron-right"></em></a>
-                                                                <div class="dropdown-menu dropdown-menu-end">
+                                                                <div class="dropdown-menu dropdown-menu-end" style="padding: 10px;">
                                                                     <ul class="link-list-opt no-bdr">
-                                                                        <li><a href="#"><span>Alphabetically, A-Z</span></a></li>
+                                                                        <div class="col-12">
+                                                                            <div class="form-group">
+                                                                                <label class="overline-title overline-title-alt">Hospital</label>
+                                                                                <select class="form-select js-select2">
+                                                                                    <option value="any">XYZ Hospital</option>
+                                                                                    <option value="ev">Vargas Hospital </option>
+                                                                                    <option value="ve">Vargas Hospital</option>
+                                                                                    <option value="ti">Tasmin Hospital</option>
+                                                                                </select>
+                                                                            </div>
+                                                                        </div>
+                                                                        <br>
+                                                                        <div class="col-12">
+                                                                            <div class="form-group">
+                                                                                <label class="overline-title overline-title-alt">Manufacturer</label>
+                                                                                <select class="form-select js-select2">
+                                                                                    <option value="any">XYZ Manufacturer</option>
+                                                                                    <option value="ev">Manufacturer A</option>
+                                                                                    <option value="ve">Manufacturer B</option>
+                                                                                    <option value="ti">Manufacturer C</option>
+                                                                                </select>
+                                                                            </div>
+                                                                        </div>
+                                                                        <br>
+
+                                                                        <div class="row">
+                                                                            <label class="overline-title overline-title-alt">Expiry Date Range</label>
+                                                                            <div class="col-6">
+                                                                                <div class="form-group">
+                                                                                    <div class="form-control-wrap">
+                                                                                        <div class="form-icon form-icon-right">
+                                                                                            <em class="icon ni ni-calendar"></em>
+                                                                                        </div>
+                                                                                        <input type="text" class="form-control date-picker" data-date-format="dd-mm-yyyy" placeholder="dd-mm-yyyy">
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+
+                                                                            <div class="col-6">
+                                                                                <div class="form-group">
+                                                                                    <!-- <label class="overline-title overline-title-alt">Expiry Date</label> -->
+                                                                                    <div class="form-control-wrap">
+                                                                                        <div class="form-icon form-icon-right">
+                                                                                            <em class="icon ni ni-calendar"></em>
+                                                                                        </div>
+                                                                                        <input type="text" class="form-control date-picker" data-date-format="dd-mm-yyyy" placeholder="dd-mm-yyyy">
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+
+                                                                        </div>
+                                                                            
+                                                                        <!-- <li><a href="#"><span>Alphabetically, A-Z</span></a></li>
                                                                         <li><a href="#"><span>Alphabetically, Z-A</span></a></li>
-                                                                        <li><a href="#"><span>Best Selling</span></a></li>
+                                                                        <li><a href="#"><span>Best Selling</span></a></li> -->
                                                                     </ul>
                                                                 </div>
                                                             </div>
