--- a/superAdmin/super-admin-dashboard.html
+++ b/superAdmin/super-admin-dashboard.html
@@ -517,7 +517,7 @@
                                                         <li class="item">
                                                             <div class="info">
                                                                 <div class="fs-14px fw-bold">Total Medical Doctors</div>
-                                                                <div class="count">200</div>
+                                                                <div class="count">1200</div>
                                                             </div>
                                                             <em class="icon bg-primary-dim ni ni-users"></em>
                                                         </li>
@@ -532,7 +532,7 @@
                                                         <li class="item">
                                                             <div class="info">
                                                                 <div class="fs-14px fw-bold">Total Nurses</div>
-                                                                <div class="count">200</div>
+                                                                <div class="count">2520</div>
                                                             </div>
                                                             <em class="icon bg-primary-dim ni ni-users"></em>
                                                         </li>
@@ -547,7 +547,7 @@
                                                         <li class="item">
                                                             <div class="info">
                                                                 <div class="fs-14px fw-bold">Total Non-Medical Staff</div>
-                                                                <div class="count">200</div>
+                                                                <div class="count">1010</div>
                                                             </div>
                                                             <em class="icon bg-primary-dim ni ni-users"></em>
                                                         </li>
@@ -563,7 +563,7 @@
                                                         <li class="item">
                                                             <div class="info">
                                                                 <div class="fs-14px fw-bold">Total Federal Hospitals</div>
-                                                                <div class="count">2200</div>
+                                                                <div class="count">450</div>
                                                             </div>
                                                             <em class="icon bg-primary-dim ni ni-home-fill"></em>
                                                         </li>
@@ -578,7 +578,7 @@
                                                         <li class="item">
                                                             <div class="info">
                                                                 <div class="fs-14px fw-bold">Total Departments</div>
-                                                                <div class="count">200</div>
+                                                                <div class="count">1200</div>
                                                             </div>
                                                             <em class="icon bg-primary-dim ni ni-home-fill"></em>
                                                         </li>
@@ -602,50 +602,6 @@
                                             </div><!-- .card -->
                                         </div>
                                         
-                                        <div class="col-xxl-3 col-sm-6">
-                                            <div class="card">
-                                                <div class="nk-ecwg nk-ecwg6">
-                                                    <div class="card-inner">
-                                                        <div class="card-title-group">
-                                                            <div class="card-title ">
-                                                                <h6 class="title">Labotory Income</h6>
-                                                            </div>
-                                                        </div>
-                                                        <div class="data">
-                                                            <div class="data-group">
-                                                                <div class="amount">₦5,220,847</div>
-                                                                <div class="nk-ecwg6-ck">
-                                                                    <canvas class="ecommerce-line-chart-s3" id="labIncome"></canvas>
-                                                                </div>
-                                                            </div>
-                                                            <div class="info"><span class="change up text-danger"><em class="icon ni ni-arrow-long-up"></em>4.63%</span><span> vs. last week</span></div>
-                                                        </div>
-                                                    </div><!-- .card-inner -->
-                                                </div><!-- .nk-ecwg -->
-                                            </div><!-- .card -->
-                                        </div><!-- .col -->
-                                        <div class="col-xxl-3 col-sm-6">
-                                            <div class="card">
-                                                <div class="nk-ecwg nk-ecwg6">
-                                                    <div class="card-inner">
-                                                        <div class="card-title-group">
-                                                            <div class="card-title">
-                                                                <h6 class="title">Expense</h6>
-                                                            </div>
-                                                        </div>
-                                                        <div class="data">
-                                                            <div class="data-group">
-                                                                <div class="amount">₦523,485</div>
-                                                                <div class="nk-ecwg6-ck">
-                                                                    <canvas class="ecommerce-line-chart-s3" id="todayExpense"></canvas>
-                                                                </div>
-                                                            </div>
-                                                            <div class="info"><span class="change up text-primary"><em class="icon ni ni-arrow-long-up"></em>1.34%</span><span> vs. last week</span></div>
-                                                        </div>
-                                                    </div><!-- .card-inner -->
-                                                </div><!-- .nk-ecwg -->
-                                            </div><!-- .card -->
-                                        </div><!-- .col -->
                                         <div class="col-md-6 col-xxl-3">
                                             <div class="card h-100">
                                                 <div class="card-inner">
@@ -699,8 +655,8 @@
                                                 <div class="card-inner">
                                                     <div class="card-title-group align-start pb-3 g-2">
                                                         <div class="card-title">
-                                                            <h6 class="title">Total Revenue</h6>
-                                                            <p>In 30 days income of this hospital.</p>
+                                                            <h6 class="title">Total Death Rate Across all Federal Hospitals</h6>
+                                                            <!-- <p>In 30 days income of this hospital.</p> -->
                                                         </div>
                                                         <div class="card-tools">
                                                             <em class="card-hint icon ni ni-help" data-bs-toggle="tooltip" data-bs-placement="left" title="Revenue of this month"></em>
@@ -709,18 +665,18 @@
                                                     <div class="analytic-au">
                                                         <div class="analytic-data-group analytic-au-group g-3">
                                                             <div class="analytic-data analytic-au-data">
-                                                                <div class="title">Monthly</div>
-                                                                <div class="amount">98K</div>
+                                                                <div class="title">Adults</div>
+                                                                <div class="amount">1.2K</div>
                                                                 <div class="change up"><em class="icon ni ni-arrow-long-up"></em>4.63%</div>
                                                             </div>
                                                             <div class="analytic-data analytic-au-data">
-                                                                <div class="title">Weekly</div>
-                                                                <div class="amount">9.69K</div>
+                                                                <div class="title">Children</div>
+                                                                <div class="amount">0.69K</div>
                                                                 <div class="change down"><em class="icon ni ni-arrow-long-down"></em>1.92%</div>
                                                             </div>
                                                             <div class="analytic-data analytic-au-data">
-                                                                <div class="title">Daily (Avg)</div>
-                                                                <div class="amount">3.94K</div>
+                                                                <div class="title">Infants</div>
+                                                                <div class="amount">0.94K</div>
                                                                 <div class="change up"><em class="icon ni ni-arrow-long-up"></em>3.45%</div>
                                                             </div>
                                                         </div>
@@ -741,7 +697,7 @@
                                                     <div class="card-title-group pb-3 g-2">
                                                         <div class="card-title">
                                                             <h6 class="title">Birth Rate vs Death Rate</h6>
-                                                            <p>Last 6 months Birth Rate vs Death Rate Statistics across federal hospitals.</p>
+                                                            <p>Last 6 months Birth Rate vs Death Rate Statistics across all federal hospitals.</p>
                                                         </div>
                                                         <div class="card-tools shrink-0 d-none d-sm-block">
                                                             <ul class="nav nav-switch-s2 nav-tabs bg-white">
